--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,5 +9,5 @@ services:
     ports:
       - 8081:8080
     devices:
-      - /dev/ttyAMA0:/dev/ttyAMA0
-    command: ["/dev/ttyAMA0"]
+      - /dev/ttyACM0:/dev/ttyACM0
+    command: ["/dev/ttyACM0", "--hostname", "0.0.0.0", "--port", "8080"]
