(refactor) hummingbird user permissions

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,4 +11,6 @@ services:
       - 8081:8080
     devices:
       - /dev/ttyACM0:/dev/ttyACM0
+    group_add:
+      - dialout
     command: ["/dev/ttyACM0", "--hostname", "0.0.0.0", "--port", "8080"]
